# projeto-jaffle-shop

./: .gitignore  .user.yml  Diagrama sem nome.drawio  README.md  dbt_project.yml  profiles.yml  pyproject.toml
macros/: cents_to_dollars.sql
models/mart/: best_selling_product_for last_month.sql
models/staging/: _jaffle_shop__models.yml  _source.yml  stg_jaffle_shop__customers.md  stg_jaffle_shop__customers.sql  stg_jaffle_shop__customers.yml  stg_jaffle_shop__order_items.sql  stg_jaffle_shop__order_items.yml  stg_jaffle_shop__orders.sql  stg_jaffle_shop__orders.yml  stg_jaffle_shop__products.sql  stg_jaffle_shop__products.yml  stg_jaffle_shop__stores.sql  stg_jaffle_shop__stores.yml  stg_jaffle_shop__supplies.yml
src/: db.py  models.py  pipeline_extract.py
