[tool.poetry]
name = "projeto-jaffle-shop"
version = "0.1.0"
description = ""
authors = ["Yan Robim <yanrobim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<=3.12.8"
sqlalchemy = "^2.0.38"
pre-commit = "^4.1.0"
sqlfluff = "^3.3.1"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
sqlalchemy-bigquery = "^1.13.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
